--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="right-section">
             <a href="http://127.0.0.1:5500/projects.html" class="projects">Projects</a>
-            <a class="contact">Contact</a>
+            <a href="http://127.0.0.1:5500/contact.html" class="contact">Contact</a>
         </div>
     </header>
     <main>
@@ -32,8 +32,9 @@
             in studios and startups</p>
         </div>
         <div class="right-part">
+            <div class="sub-right-part">
             <img class="small-rec" src="images/Rectangle.png">
-            <p class="p3">Design is about progress </p>
+            <p class="p3">Design is about progress </p></div>
         </div> 
     </section>
 
