--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     </section>
 
     <section class="section2">
+        <div class="container">
             <div class="rectangle1"><img src="images/Rectangle1.png" alt="Its a rectangle"></div>
             <div class="rectangle2"><img src="images/Rectangle2.png" alt="Its a rectangle"></div>
             <div class="rectangle3"><img src="images/Rectangle3.png" alt="Its a rectangle"></div>
@@ -55,9 +56,11 @@
             <div class="rectangle10"><img src="images/Rectangle10.png" alt="Its a rectangle"></div>
             <div class="rectangle11"><img src="images/Rectangle11.png" alt="Its a rectangle"></div>
             <div class="rectangle12"><img src="images/Rectangle12.png" alt="Its a rectangle"></div>
+        </div>
     </section>
 
     <section class="section3">
+        <div class="container2">
         <div class="heading">
             <p>We love work hard and explore new things that’s why we cover lot of things. Check our service list and view details</p>
         </div>
@@ -75,10 +78,12 @@
                 <li>Coding</li>
             </ul>
         </div>
+    </div>
     </section>
     <section class="section4">
+        <div class="container3">
         <div class="first-part">
-            <img src="images/Divider.png">
+            <div class="divider-img"><img src="images/Divider.png"></div>
             <div class="sub-container1">
                 <p class="p1">Awwwards</p>
                 <p class="p2">Site of the day</p>
@@ -101,7 +106,7 @@
             </div>
         </div>
         <div class="second-part">
-            <img class="divider-img" src="images/Divider.png">
+            <div class="divider-img"><img src="images/Divider.png"></div>
             <div class="sub-container1">
                 <p class="p1">CSSDesignAwards</p>
                 <p class="p2">Site of the day</p>
@@ -122,8 +127,9 @@
                 </ul>
                 <p class="p3">2016</p>  
             </div>
-            <img src="images/Divider.png">
-        </div>   
+            <div class="divider-img"><img src="images/Divider.png"></div>
+        </div> 
+    </div>  
     </section>
 </main>
     <footer>
