--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
                 <p class="p1">Full set of great features to make your product fresh</p>
                 <p class="p2">Our favorite brands are our friends! We help them to achieve their goals, they help us to stay sharp.</p>
             </div>
+            <div class="right-part-container">
             <div class="right-part">
                 <form>
                     <label class="label" for="name">Name</label><br>
@@ -41,6 +42,7 @@
                 </form>
                 <button type="submit">Submit</button>
             </div>
+        </div>
         </section>
         <section class="section2">
             <img src="images/470596a8c5f9a76bc5ab1c1a71f457f3.png">
@@ -48,6 +50,7 @@
     </main>
 
     <footer>
+        <div class="footer-container">
         <div class="left">
             <svg class="logo-svg">
                 <use xlink:href="images/logo.svg#logo">
@@ -64,6 +67,7 @@
              </use>
             </svg>
         </div>
+    </div>
     </footer>
 </body>
 </html>
