--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <div class="header-container">
         <div class="left-section">
                 <svg class="logo-svg">
                     <use xlink:href="images/logo.svg#logo">
@@ -26,14 +27,15 @@
             <a href="contact.html" class="contact">Contact</a>
         </nav>
         </div>
+    </div>
     </header>
     <main>
     <section class="section1">
         <div class="left-part">
-            <p class="p1">Shooting Stars<p>
+            <p class="p1">Shooting Stars</p>
             <p class="p2">Hello, I’m Bakhtiyar Sattarov,
-            <span style="color: #4A4FF2;">product designer</span> with experience
-            in studios and startups</p>
+            <span style="color: #4A4FF2;">product designer</span>with experience in studios and startups
+            </p>
         </div>
         <div class="right-part">
             <div class="sub-right-part">
@@ -133,6 +135,7 @@
     </section>
 </main>
     <footer>
+        <div class="footer-container">
         <div class="left">
             <svg class="logo-svg">
                 <use xlink:href="images/logo.svg#logo">
@@ -148,6 +151,7 @@
                 <use xlink:href="images/genesis.svg#genesis">
              </use>
             </svg>
+        </div>
         </div>
     </footer>
 </body>
